2008-10-28  Sam Steingold  <sds@gnu.org>

	* pathname.d (PROBE-PATHNAME): do NOT modify the argument!

2008-10-27  Philippe Brochard  <hocwp@free.fr>

	* modules/clx/new-clx/clx.f (GRAB-BUTTON, UNGRAB-BUTTON): fix
	button argument handlingxs

2008-10-27  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2159172 ]: text drawing functions ignore :start & :end
	* modules/clx/new-clx/clx.f (get_substring_arg)
	(unpack_stringarg_alloca): add
	(general_draw_text, TEXT-EXTENTS, TEXT-WIDTH): use
	unpack_stringarg_alloca

2008-10-26  Sam Steingold  <sds@gnu.org>

	* makemake.in: when re-creating gllib subdir,
	use "config.status $@/Makefile depfiles"
	instead of "config.status --file=$@/Makefile depfiles" as suggested
	in <http://article.gmane.org/gmane.comp.lib.gnulib.bugs/15449>
	to work around an autoconf bug

2008-10-26  Sam Steingold  <sds@gnu.org>

	* configure (conf_dir): remove and inline (called just once);
	fix redirections to avoid the "/bin/sh: Illegal option --" error;
	check whether requested modules require FFI by looking at
	configure.in, Makefile, *.lisp instead of listing modules explicitly

2008-10-25  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (FILE-STAT): init file variable

2008-10-25  Sam Steingold  <sds@gnu.org>

	separate potentially blocking system calls from heap access
	* pathname.d (check_file_reopen): use namestring_file_id instead
	of with_file_id
	* stream.d (find_open_file): second argument is uintB flags (this
	is not used as a callback anymore)
	* unix.d, unixaux.d, win32.d, win32aux.d (namestring_file_id):
	replaces with_file_id

2008-10-24  Sam Steingold  <sds@gnu.org>

	Support Berkeley-DB 2.7
	* modules/berkeley-db/configure.in: check for
	DB_ENV.log_set_config and DB_ENV.get_intermediate_dir_mode
	* modules/berkeley-db/bdb.c (DBE-SET-OPTIONS, DBE-GET-OPTIONS)
	[HAVE_DB_ENV_GET_INTERMEDIATE_DIR_MODE]: accept :INTERMEDIATE-DIR-MODE;
	[HAVE_DB_ENV_LOG_SET_CONFIG]:
	accept LOG-DIRECT LOG-DSYNC LOG-AUTO-REMOVE LOG-IN-MEMORY LOG-ZERO