@@ -1,5 +1,12 @@
 2008-10-28  Sam Steingold  <sds@gnu.org>
 
+	fix bug #[ 2198109 ]: LOAD-LOGICAL-PATHNAME-TRANSLATIONS
+	confuses "many" and "one" when *LOAD-PATHS* is wild
+	* init.lisp (search-file): treat wild elements of *LOAD-PATHS*
+	just like non-wild ones, i.e., return directories, not their listings
+
+2008-10-28  Sam Steingold  <sds@gnu.org>
+
 	* pathname.d (PROBE-PATHNAME): do NOT modify the argument!
 
 2008-10-27  Philippe Brochard  <hocwp@free.fr>
